# finance-admin-tauri-desktop-

./: .gitignore  index-static.html  index.html  mini-app.html  package-lock.json  package.json  vite.config.js
.gitee/: pipeline.yml
.github/workflows/: build.yml
electron/: main.cjs  main.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/api/: index.js  invoice.js
src/components/: Pagination.vue  UpdateChecker.vue
src/router/: index.js
src/stores/: user.js
src/views/: Announcement.vue  Customer.vue  Dashboard.vue  Employee.vue  Finance.vue  InputInvoice.vue  Invoice.vue  Layout.vue  Login.vue  OcrImport.vue  OperationLog.vue  OutputInvoice.vue  Project.vue  Transaction.vue
