[package]
name = "finance-admin"
version = "1.0.4"
description = "业财一体化管理"
authors = ["finance"]
edition = "2021"

[lib]
name = "finance_admin_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
reqwest = { version = "0.13", features = ["rustls"] }
futures-util = "0.3"
